# YorkPulse

./: .env.example  .gitignore  CHAT_PROMPT.md  GIGSPROMPTS.md  LATENCY.md  OTP.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  courses_seed.json  entrypoint.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  send_broadcast.py
backend/alembic/: env.py
backend/alembic/versions/: 63be51c7618d_initial_schema.py  8ec545ca7d1a_merge_all_heads.py  a1b2c3d4e5f6_add_side_quest_fields.py  add_custom_vibe_level.py  add_founder_badge.py  add_gigs_tables.py  add_image_url_to_dm.py  add_image_url_to_messages.py  add_image_url_to_vault_posts.py  add_last_login_at.py  add_last_login_ip.py  add_last_read_at.py  add_professors_tables.py  add_push_subscriptions.py  add_reply_to_messages.py  add_residence_chat_tables.py  add_signup_attempts.py  add_user_feedback.py  b2c3d4e5f6g7_add_quest_coordinates.py  b40dd34aae39_add_trust_system_tables.py  c41ee45bbf40_add_course_chat_tables.py  drop_professor_tables.py  grant_founder_badge_all_users.py  merge_heads.py  merge_login_ip_and_push.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  middleware.py
backend/app/models/: __init__.py  base.py  buddy.py  (+15 more)
backend/data/: professors_seed.json
backend/scripts/: create_admin.py  create_match_function.sql  embedding_progress.json  generate_embeddings.py  scrape_courses.py  scrape_professors.py  scraper.py  seed_courses.py  seed_personas.py
(+173 files in other folders)
